# Fantastic-Racing

RACE/: .gitignore  AirRace.cpp  Broom.cpp  CMakeLists.txt  Camel.h  FastCamel.cpp  FastCamel.h  GroundRace.cpp  GroundRace.h  GroundTransport.cpp  GroundTransport.h  MagicCarpet.cpp  MainRace.h  RACE.cpp  RaceAPI.h  Transport.cpp  Transport.h  TransportArr.cpp  TransportArr.h
RACE/Air/: AirTransport.cpp  AirTransport.h  Broom.h  Eagle.cpp  Eagle.h  MagicCarpet.h
RACE/Ground/: AllTerrainBoots.cpp  AllTerrainBoots.h  Camel.cpp  Centaur.cpp  Centaur.h
RACE/RaceType/: AirRace.h  MainRace.cpp  MixedRace.cpp  MixedRace.h
